--- a/ex2/main.css
+++ b/ex2/main.css
@@ -3,7 +3,7 @@ body{
     margin: 0px;
     padding: 0px;
 }
-.header{
+header{
     background-color: white;
     border-bottom: 1px solid lightgray;
 }
